argocd/apps/homeassistant/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homeassistant
  name: homeassistant-service
spec:
  selector:
    app: homeassistant
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8123
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: homeassistant
  name: homeassistant
  labels:
    app: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  serviceName: "homeassistant"
  replicas: 3
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: homeassistant
        image: linuxserver/homeassistant:2024.4.4
        environment:
          - PUID=1000
          - PGID=1000
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
            cpu: "2.0"
        ports:
        - containerPort: 8123
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /config/configuration.yaml
          subPath: configuration.yaml
          name: configmap-volume
        - mountPath: /config/automations.yaml
          subPath: automations.yaml
          name: configmap-volume
      volumes:
      - name: configmap-volume
        configMap:
          name: homeassistant-configmap
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOncePod" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 10Gi
