argocd/apps/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant.server.schwarz47.at
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homeassistant
              port:
                number: 80
